--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "php": "^8.0"
+    "php": "^8.0",
+    "cebe/php-openapi": ">=1.4.2 <1.6.0"
   },
   "autoload": {
     "psr-4": {
