--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,12 @@
   },
   "require-dev": {
     "laravel/framework": "^8.0 || ^9.0 || ^10.0"
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Ensi\\LaravelServeStoplight\\ServeStoplightServiceProvider"
+      ]
+    }
   }
 }
